--- a/_config.yml
+++ b/_config.yml
@@ -30,9 +30,9 @@ github_username: libsql
 
 # Build settings
 theme: minima
-#plugins:
+plugins:
 #  - jekyll-feed
-
+  - jekyll-redirect-from
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
